# mobile

./: .gitignore  CLAUDE.md  IR_SPEC.md  Makefile  README.md  SPEC.md  diff_baseline.py  pyproject.toml  test_smoke.py
designs/: love.py  yurika.py
mbl/: __init__.py  __main__.py  arc_math.py  cli.py  config.py  dsl.py  errors.py  generate.py  perf.py  resolve.py  simulate.py  three_mf.py
mobile/: __init__.py  arc_math.py  blender_pivot.py  config.py  dsl.py  errors.py  generate.py  resolve.py  simulate.py  stl.py  three_mf.py
shapes/usa/: extract_states.py
tests/: test_end_to_end.py  test_simulate.py
