[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mobile"
version = "0.1.0"
requires-python = ">= 3.13"
dependencies = [
    "build123d",
]

[tool.setuptools.packages.find]
include = ["mobile*"]

[tool.uv.sources]
build123d = { path = "build123d", editable = true }
