[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbl"
version = "0.2.0"
requires-python = ">= 3.13"
dependencies = [
    "build123d",
]

[project.scripts]
mbl = "mbl.cli:main"

[tool.setuptools.packages.find]
include = ["mobile*", "mbl*"]

[tool.setuptools.package-data]
mobile = ["assets/*.svg", "assets/*.ttf"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
